# OpenCVTest

./: CMakeLists.txt  main.cpp
